--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -17,8 +17,8 @@ order += "tztime local"
 #order += "ipv6"
 # order += "wireless _first_"
 # order += "ethernet _first_"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
+# order += "run_watch DHCP"
+# order += "run_watch VPN"
 order += "battery all"
 
 wireless _first_ {
@@ -53,7 +53,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = "⏲%Y-%m-%d %H:%M %A"
+    format = " %Y-%m-%d    %H:%M %A"
 }
 
 load {
@@ -69,7 +69,7 @@ disk "/home" {
 }
 
 cpu_temperature 0 {
-    format = "CPU %degrees°C"
+    format = "CPU %degrees°C"
     max_threshold = 60
     path = "/sys/class/thermal/thermal_zone0/temp"
 }
