--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -29,6 +29,16 @@
         "cache": {
           "directory": "/tmp/ccls"
         },
+        // see https://github.com/MaskRay/ccls/issues/191
+        "clang": {
+            // from clang -v -fsyntax-only -x c++ /dev/null
+            "extraArgs": [
+                "-isystem/usr/include/c++/9",
+                "-isystem/usr/include/x86_64-linux-gnu/c++/9"
+            ],
+            //From clang -print-resource-dir
+            "resourceDir": "/usr/lib/llvm-10/lib/clang/10.0.0"
+        },
         "highlight": { "lsRanges" : true }
       }
     },
