--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -16,6 +16,7 @@
   "git.removedSign.hlGroup": "GitGutterDelete",
   "git.topRemovedSign.hlGroup": "GitGutterDelete",
   "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
+  "git.enableGutters": false,
 
 	"languageserver": {
     "ccls": {
@@ -34,7 +35,6 @@
     "ignoredRootPaths": ["~"],
     "filetypes": ["tex", "bib", "plaintex", "context"]
     }
-  },
-  "git.enableGutters": false
+  }
 }
 
