--- a/i3/config
+++ b/i3/config
@@ -36,6 +36,7 @@ for_window [window_role="task_dialog"] floating enable
 for_window [class="Thunar"] floating enable
 for_window [class="netease-cloud-music"] floating enable
 for_window [class="Telegram"] floating enable
+for_window [class="flameshot"] floating enable
 
 
 
@@ -113,6 +114,8 @@ bindsym $mod+e exec --no-startup-id thunar
 bindsym $mod+Shift+n exec --no-startup-id netease-cloud-music
 # Telegram
 bindsym $mod+Shift+t exec --no-startup-id Telegram
+# Flameshot
+bindsym $mod+Control+a exec --no-startup-id flameshot gui
 
 
 # ====================
@@ -219,28 +222,27 @@ new_window 1pixel
 default_border pixel 2
 
 # --- i3bar
-# bar {
-#   status_command i3status -c ~/.config/i3/i3status.conf
-#
-#   position top
-#   # Press `mode`(command/win) button to show i3bar
-#   # mode hide
-#   workspace_buttons yes
-#   tray_padding 0
-#   separator_symbol "|"
-#   workspace_buttons yes
-#   height 25    # Require i3-gaps
-#
-#   colors {
-#     background #222222
-#     statusline #dddddd
-#     separator #666666
-#     focused_workspace #0088CC #0088CC #ffffff #292F34
-#     active_workspace #333333 #333333 #ffffff #FDF6E3
-#     inactive_workspace #333333 #333333 #888888 #EEE8D5
-#     urgent_workspace #2f343a #900000 #ffffff #E5201D
-#   }
-# }
+bar {
+  status_command i3status -c ~/.config/i3/i3status.conf
+
+  position top
+  # Press `mode`(command/win) button to show i3bar
+  mode hide
+  workspace_buttons yes
+  tray_padding 0
+  separator_symbol "|"
+  workspace_buttons yes
+
+  colors {
+    background #222222
+    statusline #dddddd
+    separator #666666
+    focused_workspace #0088CC #0088CC #ffffff #292F34
+    active_workspace #333333 #333333 #ffffff #FDF6E3
+    inactive_workspace #333333 #333333 #888888 #EEE8D5
+    urgent_workspace #2f343a #900000 #ffffff #E5201D
+  }
+}
 
 
 # ====================
@@ -258,7 +260,4 @@ exec /home/shawn/.config/i3/scripts/touchpad.sh
 # --- Polybar: 自定义状态栏
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
-# --- i3-gaps
-gaps inner 4
-# smart_gaps on
 
