--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,3 +3,5 @@
 	name = lazyshawn
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[credential]
+	helper = store
