--- a/i3/config
+++ b/i3/config
@@ -40,6 +40,7 @@ for_window [class="Thunar"] floating enable
 for_window [class="netease-cloud-music"] floating enable
 for_window [class="Telegram"] floating enable
 for_window [class="flameshot"] floating enable
+for_window [class="vlc"] floating enable
 
 
 
@@ -205,7 +206,7 @@ mode "$mode_system" {
 # ====================
 # --- Wallpaper
 # static mode
-exec_always --no-startup-id feh --bg-scale "/home/shawn/Pictures/wallpapers/wuliuqi.jpg"
+exec_always --no-startup-id feh --bg-scale "/home/shawn/Pictures/wallpapers/hollowknight.jpg"
 # random mode
 # exec --no-startup-id  ~/.config/i3/wallpaper.sh &
 
@@ -256,6 +257,7 @@ exec_always compton
 # --- 开机启动脚本
 # 禁用触摸板、禁用鼠标加速
 exec /home/shawn/.config/i3/scripts/touchpad.sh
+exec /home/shawn/.config/i3/scripts/setup.sh
 
 # ====================
 # === Plugins
