--- a/i3/config
+++ b/i3/config
@@ -28,6 +28,10 @@ bindsym $mod+F5 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle &
 bindsym $mod+F6 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym $mod+F7 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
 
+# --- brightnessctl
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+
 # --- focus follow mouse
 focus_follows_mouse no
 
@@ -53,7 +57,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec rofi -show run
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -206,7 +211,7 @@ mode "$mode_system" {
 # ====================
 # --- Wallpaper
 # static mode
-exec_always --no-startup-id feh --bg-scale "/home/shawn/Pictures/wallpapers/hollowknight.jpg"
+exec_always --no-startup-id feh --bg-scale "/home/shawn/Pictures/wallpapers/gruvbox-city.png"
 # random mode
 # exec --no-startup-id  ~/.config/i3/wallpaper.sh &
 
